infra/k3s/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app.kubernetes.io/part-of: tournaments-manager
